<resources>
    <string name="app_name">BarVolume</string>
    <string name="lebar">Lebar</string>
    <string name="panjang">Panjang</string>
    <string name="result">Hasil</string>
    <string name="tinggi">Tinggi</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity Dengan Data</string>
    <string name="pindah_activity_dengan_object">Pindah Activity Dengan Object</string>
    <string name="dial_a_number">dial a number</string>
    <string name="pindah_untuk_result">Pindah Untuk Result</string>
    <string name="hasil_intent">Hasil Intent</string>
    <string name="kalkulasi">Kalkulasi</string>
    <string name="intent">Intent</string>
    <string name="ini_halaman_move_activity">Ini Halaman Move Activity</string>
    <string name="choose_number">Pilih Angka</string>
    <string name="_50">50</string>
    <string name="_21">21</string>
    <string name="_10">10</string>
    <string name="_500">500</string>
    <string name="choose">Pilih</string>
    <string name="fragment">Fragment</string>
    <string name="fragment_page">Halaman Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello ! ini Home Fragment</string>
    <string name="kategori">Ke Kategori Fragment</string>
    <string name="ini_halaman_katetori">Hello ! ini halaman Katetori</string>
    <string name="ke_fragment_lifestyle">Ke Fragment Lifestyle</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="to_profile">Ke profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Morinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="close">Close</string>
    <string name="pilih_pelatih">Pilih Pelatih</string>
    <string name="profile">Ini Profile Activity</string>
</resources>