<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityMoveResult">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_number" />

    <RadioGroup
        android:id="@+id/rg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50" />

        <RadioButton
            android:id="@+id/rb_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_500" />

        <RadioButton
            android:id="@+id/rb_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10" />

        <RadioButton
            android:id="@+id/rb_21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_21" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"/>
</LinearLayout>